<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="top.bestguo.androidlayout.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/linear_layout"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn2"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn3"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn4"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn5"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn6"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn7"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn8"/>

        <Button
            android:id="@+id/btn10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn10"/>

        <Button
            android:id="@+id/btn11"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn11"/>

        <Button
            android:id="@+id/btn12"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn12"/>

        <Button
            android:id="@+id/btn13"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn13"/>

        <Button
            android:id="@+id/btn14"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn14"/>

        <Button
            android:id="@+id/btn15"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn15"/>

        <Button
            android:id="@+id/btn16"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn16"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:text="测试按钮 1"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:text="测试按钮 2" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:text="测试按钮 3" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>
